--- a/src/drumee/builtins/editor/markdow/skin/viewer.scss
+++ b/src/drumee/builtins/editor/markdow/skin/viewer.scss
@@ -1,5 +1,4 @@
-@import "mixins/typo.scss";
-
+@use "mixins/drumee";
 .drumee-md-container {
   max-width: 800px;
   display: flex;
@@ -17,32 +16,32 @@
   &.heading {
     &-1 {
       margin: 15px 0;
-      @include typo($size: 30px, $line: 1.3, $color: var(--default-text-title));
+      @include drumee.typo($size: 30px, $line: 1.3, $color: var(--default-text-title));
     }
 
     &-2 {
       margin: 13px 0 13px 26px;
-      @include typo($size: 26px, $line: 1.3, $color: var(--default-text-title));
+      @include drumee.typo($size: 26px, $line: 1.3, $color: var(--default-text-title));
     }
 
     &-3 {
       margin: 11px 0 11px 48px;
-      @include typo($size: 22px, $line: 1.3, $color: var(--default-text-title));
+      @include drumee.typo($size: 22px, $line: 1.3, $color: var(--default-text-title));
     }
 
     &-4 {
       margin: 9px 0 9px 56px;
-      @include typo($size: 18px, $line: 1.3, $color: var(--default-text-title));
+      @include drumee.typo($size: 18px, $line: 1.3, $color: var(--default-text-title));
     }
 
     &-5 {
       margin: 8px 0 8px 72px;
-      @include typo($size: 16px, $line: 1.3, $color: var(--default-text-title));
+      @include drumee.typo($size: 16px, $line: 1.3, $color: var(--default-text-title));
     }
   }
 
   &.list {
-    @include typo($size: 15px,
+    @include drumee.typo($size: 15px,
       $line: 1.5,
       $color: var(--neutral-text-notification) );
     margin-top: 15px;
@@ -52,7 +51,7 @@
     padding: 0;
 
     &--item {
-      @include typo($size: 14px,
+      @include drumee.typo($size: 14px,
         $line: 1.3,
         $color: var(--neutral-text-notification) );
       margin-left: 15px;
@@ -67,7 +66,7 @@
   }
 
   &.paragraph {
-    @include typo($size: 14px,
+    @include drumee.typo($size: 14px,
       $line: 1.3,
       $color: var(--neutral-text-notification) );
     margin-bottom: 10px;
@@ -97,7 +96,7 @@
       display: flex;
       flex-direction: row;
       border: none;
-      @include typo($size: 14px, $line: 1.4, $color: white);
+      @include drumee.typo($size: 14px, $line: 1.4, $color: white);
       margin-left: 15px;
     }
   }
@@ -128,12 +127,12 @@
       td {
         vertical-align: middle;
         padding: 2px 0;
-        @include typo($size: 14px,
+        @include drumee.typo($size: 14px,
           $line: 1.2,
           $color: var(--neutral-text-notification) );
 
         &[data-header="true"] {
-          @include typo($size: 16px,
+          @include drumee.typo($size: 16px,
             $line: 1.5,
             $color: var(--neutral-text-notification) );
           border-bottom: 1px solid rgb(10, 140, 232);
