--- a/src/drumee/builtins/webrtc/endpoint/remote/user/skin/index.scss
+++ b/src/drumee/builtins/webrtc/endpoint/remote/user/skin/index.scss
@@ -1,13 +1,10 @@
-/** ================================================================== *
-#   Copyright Xialia.com  2011-2020
-#   FILE : /src/drumee/builtins/player/stream/skin/index.scss
-#   TYPE : Component style
-# ===================================================================**/
-@import 'mixins/drumee';
+@use 'mixins/drumee';
+@use 'builtins/webrtc/skin/avatar' as *;
+@use 'builtins/webrtc/skin/video' as *;
 
 .remote-user{
-  @import 'builtins/webrtc/skin/avatar';
-  @import 'builtins/webrtc/skin/video';
+  @include webrtc-avatar;
+  @include webrtc-video;
   &__ui{
     height: 100%;
     width: 100%;
@@ -25,7 +22,7 @@
 
   &__label{
     margin-top: 40px;
-    @include typo($size: 18px, $line: 22px, $weight: 400, $color: var(--default-text-reverse));
+    @include drumee.typo($size: 18px, $line: 22px, $weight: 400, $color: var(--default-text-reverse));
     .drumee-loading{
       margin-left: 50%;
       margin-top: -15px;
@@ -34,7 +31,7 @@
 
   &__presenter-name{
     position: absolute;
-    @include typo($size: 18px, $line: 22px, $weight: 400, $color: var(--default-text-reverse));
+    @include drumee.typo($size: 18px, $line: 22px, $weight: 400, $color: var(--default-text-reverse));
     .drumee-loading{
       margin-left: 50%;
       margin-top: -15px;
@@ -62,7 +59,7 @@
     align-items: center;  
     z-index: 50000;
     .drumee-text{
-      @include typo($size: 14px, $line: 16px, $weight: 400, $color: var(--default-text-reverse));
+      @include drumee.typo($size: 14px, $line: 16px, $weight: 400, $color: var(--default-text-reverse));
     }
     &[data-error="0"]{
       display: none;
@@ -73,7 +70,7 @@
       display: flex;
     }
     .drumee-text{
-      @include typo($size: 14px, $line: 16px, $weight: 400, $color: var(--default-text-reverse));
+      @include drumee.typo($size: 14px, $line: 16px, $weight: 400, $color: var(--default-text-reverse));
     }
   }
 
