--- a/src/drumee/builtins/window/helpdesk/skin/index.scss
+++ b/src/drumee/builtins/window/helpdesk/skin/index.scss
@@ -2,7 +2,7 @@
 
 .window-help-desk {
   --helpdesk-default-text-reverse: #4a90e2;
-  --helpdesk-background-header: #B6BFCA;
+  --helpdesk-header-bg: #B6BFCA;
   --helpdesk-separator-color: #4a90e2;
   --helpdesk-default-text-alert: var(--default-text-alert);
   --helpdesk-default-text-reverse: var(--default-text-reverse);
