--- a/src/drumee/skin/mixins/drumee.scss
+++ b/src/drumee/skin/mixins/drumee.scss
@@ -1,5 +1,7 @@
-@forward './box-shadow.scss';
-@forward './typo.scss';
-@forward './utils.scss';
-@forward './vendor.scss';
+@forward './box-shadow';
+@forward './button';
+@forward './typo';
+@forward './utils';
+@forward './vendor';
+
 
