Fixed SASS migration

--- a/src/drumee/builtins/widget/background-image/skin/index.scss
+++ b/src/drumee/builtins/widget/background-image/skin/index.scss
@@ -1,9 +1,8 @@
 /** ================================================================== *
-#   Copyright Xialia.com  2011-2023
-#   FILE : /src/drumee/builtins/widget/background-image/skin/index.scss
+#   FILE : builtins/widget/background-image/skin/index
 #   TYPE : Component style
 # ===================================================================**/
-@use 'mixins/drumee';
+// @use 'mixins/drumee';
 
 .drumee-background {
 
