--- a/src/drumee/builtins/widget/invitation/message/skin/index.scss
+++ b/src/drumee/builtins/widget/invitation/message/skin/index.scss
@@ -7,7 +7,7 @@
     padding: 25px 25px 15px;
     margin: 0 auto;
     background-color: var(--default-bg-block);
-    box-shadow: drumee.$drumee-shadow-box;
+    box-shadow: var(--drumee-shadow-box);
     border-radius: var(--border-radius);
     position: absolute;
 
