--- a/src/drumee/builtins/window/adminpanel/widget/member-roles-menu/skin/index.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/member-roles-menu/skin/index.scss
@@ -24,7 +24,7 @@
     & .menu-topic-items {
       background-color: var(--default-background);
       border-radius:var(--border-radius);
-      box-shadow:drumee.$drumee-container-dropdown;
+      box-shadow:var(--drumee-container-dropdown);
       max-height: 250px;
       max-width: 160px;
       min-width: 160px;
