--- a/src/drumee/builtins/window/adminpanel/widget/members_list/skin/add-menu.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/members_list/skin/add-menu.scss
@@ -12,7 +12,7 @@
       & .menu-topic-items {
         background-color: var(--default-background);
         border-radius: var(--border-radius);
-        box-shadow: drumee.$drumee-container-dropdown;
+        box-shadow: var(--drumee-container-dropdown);
         justify-content: center;
         max-width: 202px;
         min-height: 50px;
