--- a/src/drumee/builtins/window/folder/skin/index.scss
+++ b/src/drumee/builtins/window/folder/skin/index.scss
@@ -75,7 +75,7 @@
     grid-gap: 3px;
     background-color: var(--default-background);
     border-radius: var(--border-radius);
-    box-shadow: drumee.$drumee-shadow-box;
+    box-shadow: var(--drumee-shadow-box);
     padding: 8px;
     right: 126px;
     top: 44px;
