--- a/src/drumee/builtins/window/skin/group/header/breadcrumbs.scss
+++ b/src/drumee/builtins/window/skin/group/header/breadcrumbs.scss
@@ -129,7 +129,7 @@
       max-height: 250px;
       background: var(--default-bg);
       border-radius: var(--border-radius);
-      box-shadow: drumee.$drumee-shadow-box;
+      box-shadow: var(--drumee-shadow-box);
       padding: 10px 0;
 
       &:before {
