--- a/src/drumee/builtins/window/supportticket/widget/support-tickets/skin/filter-menu.scss
+++ b/src/drumee/builtins/window/supportticket/widget/support-tickets/skin/filter-menu.scss
@@ -11,7 +11,7 @@
 
       & .menu-topic-items {
         background-color: var(--default-background);
-        box-shadow: drumee.$drumee-container-dropdown;
+        box-shadow: var(--drumee-container-dropdown);
         border-radius: var(--border-radius);
         max-width: 202px;
         min-width: 170px;
