--- a/src/drumee/builtins/player/skin/header.scss
+++ b/src/drumee/builtins/player/skin/header.scss
@@ -59,7 +59,7 @@
     grid-gap: 3px;
     background-color: var(--default-background);
     border-radius: var(--border-radius);
-    box-shadow: drumee.$drumee-shadow-box;
+    box-shadow: var(--drumee-shadow-box);
     padding: 8px;
     top: -1px;
     min-width: 265px;
