--- a/src/drumee/builtins/webrtc/skin/index.scss
+++ b/src/drumee/builtins/webrtc/skin/index.scss
@@ -302,7 +302,7 @@
 
   .window-warning__body {
     background-color: var(--default-bg);
-    box-shadow: drumee.$drumee-shadow-box;
+    box-shadow: var(--drumee-shadow-box);
     border: none;
     min-width: 300px;
     padding: 20px;
