--- a/src/drumee/builtins/widget/chat/skin/index.scss
+++ b/src/drumee/builtins/widget/chat/skin/index.scss
@@ -171,7 +171,7 @@
       }
 
       &__wrapper-popup.dialog__wrapper[data-state="open"] {
-        box-shadow: drumee.$drumee-shadow-box;
+        box-shadow: var(--drumee-shadow-box);
         min-height: 180px;
         width: 319px;
       }
