--- a/src/drumee/builtins/widget/invitation/public-link/skin/index.scss
+++ b/src/drumee/builtins/widget/invitation/public-link/skin/index.scss
@@ -6,7 +6,7 @@
     background-color:var(--default-bg); //$default-block-background;  
     border-radius: var(--border-radius);
     margin: 0px 25px;
-    box-shadow: drumee.$drumee-shadow-box;
+    box-shadow: var(--drumee-shadow-box);
   //  box-shadow: 0 5px 3px 0 rgba(218,227,239,.14), 0 1px 1px 0 rgba(0,0,0,.12), 0 2px 5px 0 rgba(218,227,239,.46);
   }
   &__content {
