--- a/src/drumee/builtins/window/sharebox/widget/invitation-email/skin/index.scss
+++ b/src/drumee/builtins/window/sharebox/widget/invitation-email/skin/index.scss
@@ -120,7 +120,7 @@
     width: 100%;
     top: 100%;
     z-index: 100000;
-    box-shadow: drumee.$drumee-shadow-box;//0px 3px 4px var(--egrey-e8);
+    box-shadow: var(--drumee-shadow-box);//0px 3px 4px var(--egrey-e8);
     border-radius: var(--border-radius);//3px;
     // padding: 10px;
     margin-left: -25px;
