--- a/src/drumee/builtins/window/supportticket/skin/breadcrumbs.scss
+++ b/src/drumee/builtins/window/supportticket/skin/breadcrumbs.scss
@@ -83,7 +83,7 @@
     &__roll {
       background: var(--default-background);
       border-radius: var(--border-radius-small); //4px;
-      box-shadow: drumee.$drumee-container-dropdown; // 0 6px 10px 1px rgba(63,79,117,0.13), 0 7px 20px 0 rgba(86,65,113,0.08), 0 3px 17px 0 rgba(194,185,203,0);
+      box-shadow: var(--drumee-container-dropdown); // 0 6px 10px 1px rgba(63,79,117,0.13), 0 7px 20px 0 rgba(86,65,113,0.08), 0 3px 17px 0 rgba(194,185,203,0);
       height: auto;
       left: -12px;
       overflow: visible;
