--- a/src/drumee/skin/index.scss
+++ b/src/drumee/skin/index.scss
@@ -1,7 +1,8 @@
 @use "./vars/index";
 @use "./lib/reset";
 @use "./lib/input";
-@use "./lib/typo";
+@use "./lib/align";
+// @use "./lib/button";
 @use "./lib/container";
 @use "./lib/svg.scss";
 @use "./lib/menu";
